fix: do not show horizontal scroll (320px)

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -798,5 +798,6 @@
   .footer__location-container {
     margin: auto;
     gap: 40px;
+    width: auto;
   }
 }
