--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -492,5 +492,6 @@
   .footer__location-container {
     margin: auto;
     gap: 40px;
+    width: auto;
   }
 }
